# course_project_3_

./: .gitignore  func.py  main.py  pyproject.toml  test_open_file.json
tests/: test_func.py
