[tool.poetry]
name = "course-project-3"
version = "0.1.0"
description = ""
authors = ["user <kosareva.karina2013@yandex.ru>"]
readme = "README.md"
packages = [{include = "course_project_3"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
